deploy/o11n/k8s/microk8s/ap-nimbus/deploy-appmanager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-appmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      apnimbus: svc-appmanager
  template:
    metadata:
      labels:
        apnimbus: svc-appmanager
    spec:
      containers:
      - env:
        - name: REST_API_URL_DATA
          value: http://svc-datastore.dev-namespace.svc.cluster.local:8118/
        image: ${LOCAL_REGISTRY}/ap-nimbus-app-manager:jenkinslatest
        imagePullPolicy: Always
        name: appmanager-ctr
        ports:
        - containerPort: 8080
      restartPolicy: Always
