deploy/o11n/k8s/microk8s/ap-nimbus/deploy-clientdirect.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-clientdirect
spec:
  replicas: 1
  selector:
    matchLabels:
      apnimbus: svc-clientdirect
  template:
    metadata:
      labels:
        apnimbus: svc-clientdirect
    spec:
      containers:
      - env:
        - name: REST_API_URL_APPMGR
          value: am/
        - name: REST_API_URL_DATA
          value: api/collection/
        image: ${LOCAL_REGISTRY}/ap-nimbus-client-direct:jenkinslatest
        imagePullPolicy: Always
        name: clientdirect-ctr
        ports:
        - containerPort: 4200
      restartPolicy: Always
