deploy/o11n/k8s/microk8s/ap-nimbus/deploy-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-database
spec:
  replicas: 1
  selector:
    matchLabels:
      apnimbus: svc-database
  template:
    metadata:
      labels:
        apnimbus: svc-database
    spec:
      containers:
      - args:
        - mongod
        - --smallfiles
        - --logpath=/var/log/mongodb/mongodb.log
        image: mongo:4.0
        imagePullPolicy: Always
        name: database-ctr
        ports:
        - containerPort: 27017
      restartPolicy: Always
