deploy/o11n/k8s/microk8s/ap-nimbus/svc-clientdirect.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    apnimbus: svc-clientdirect
  name: svc-clientdirect
spec:
  ports:
  - port: 4200
    protocol: TCP
  selector:
    apnimbus: svc-clientdirect
