deploy/o11n/k8s/microk8s/ap-nimbus/svc-database.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    apnimbus: svc-database
  name: svc-database
spec:
  ports:
  - port: 27017
    protocol: TCP
  selector:
    apnimbus: svc-database
