deploy/o11n/k8s/microk8s/ap-nimbus/svc-datastore.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    apnimbus: svc-datastore
  name: svc-datastore
spec:
  ports:
  - port: 8118
    protocol: TCP
  selector:
    apnimbus: svc-datastore
