deploy/o11n/k8s/microk8s/ap-nimbus/ing-ap-nimbus.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ap-nimbus-ingress
  namespace: dev-namespace
  annotations: 
     #kubernetes.io/ingress.class: "nginx"
     #nginx.ingress.kubernetes.io/rewrite-target: "/"
     #nginx.ingress.kubernetes.io/proxy-connect-timeout: "5"
     #nginx.ingress.kubernetes.io/proxy-read-timeout: "5"
     #nginx.ingress.kubernetes.io/proxy-send-timeout: "5"
     #nginx.ingress.kubernetes.io/send-timeout: "5"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: svc-clientdirect
          servicePort: 4200
      - path: /am/
        backend:
          serviceName: svc-appmanager
          servicePort: 8080
      - path: /api/
        backend:
          serviceName: svc-datastore
          servicePort: 8118
